; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_murmur3.c_get_k1.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_murmur3.c_get_k1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@c1 = common dso_local global i32 0, align 4
@c2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @get_k1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_k1(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @AV_RL64(i32* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* @c1, align 4
  %7 = load i32, i32* %3, align 4
  %8 = mul nsw i32 %7, %6
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @ROT(i32 %9, i32 31)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* @c2, align 4
  %12 = load i32, i32* %3, align 4
  %13 = mul nsw i32 %12, %11
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i32 @AV_RL64(i32*) #1

declare dso_local i32 @ROT(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
